added hot reload for development

--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
   ],
   "background": {
     "scripts": [
-      "background.js"
+      "background.js", "hot-reload.js"
     ],
     "persistent": true
   },
