--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "ConVista SAP CPI Helper",
   "short_name": "CPI Helper",
-  "version": "0.5.6",
+  "version": "1.0.0",
   "description": "Extends the SAP Cloud Platform Integration with some useful features to improve usability.",
   "author": "Dominic Beckbauer @ Convista Consulting AG",
   "homepage_url": "https://github.com/dbeck121/ConVista-CPI-Helper-Chrome-Extension",
@@ -24,7 +24,11 @@
         "https://*.hana.ondemand.com/itspaces/*"
       ],
       "js": [
+        "/prettify/prettify.js",
         "contentScript.js"
+      ],
+      "css": [
+        "/prettify/prettify.css"
       ]
     }
   ],
